--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,21 @@
-title: Hello, world! I'm David Freeman
+title: Harry Cho's Personal Blog 
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is Harry Cho's personal blog powered by Jekyll & github page.
+  In this blog, I will talk about my daily life as well as my interest towards technical stuff, such as AR, VR, machine learning and etc.
+  Thanks for visiting my blog, and hope you enjoy the reading.   
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
+author: Hyunmin Cho # add your name
 author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-twitter: # add your Twitter handle
-facebook: # add your Facebook handle
-github: artemsheludko # add your Github handle
-linkedin: # add your Linkedin handle
-email: # add your Email address
+about-author: I am a product & service planner focusing on fast prototyping. I'm always open to exploring new opportunity and to learning.
+facebook: jo121jo # add your Facebook handle
+github: HarryCho # add your Github handle
+# linkedin: # add your Linkedin handle
+# email: # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
