--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Hyunmin Cho # add your name
 author-img: david-freeman.jpg # add your photo
 about-author: I am a product & service planner focusing on fast prototyping. I'm always open to exploring new opportunity and to learning.
-facebook: jo121jo # add your Facebook handle
+facebook: harrison.h.cho # add your Facebook handle
 github: HarryCho # add your Github handle
 # linkedin: # add your Linkedin handle
 # email: # add your Email address
